--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: Start Jekyll
 email: taniarascia@gmail.com
 description: >
   A guide to getting started with Jekyll.
-baseurl: "/startjekyll"
-url: "http://taniarascia.github.io"
-twitter_username: taniarascia
-github_username:  taniarascia
+baseurl: "/"
+url: "http://gjg.github.io"
+twitter_username: 
+github_username:  gjg
 # Build Settings
 sass:
   sass_dir: _sass
